Corrected body scrollbar displays

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -10,7 +10,8 @@
  */
 body, html {
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 html {
